[package]
name = "vcf_add_ids"
version = "0.1.0"
edition = "2021"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
description = "Add IDs to VCF records"
license = "MIT"
documentation = "https://docs.rs/my_crate"
repository = "https://github.com/ekg/vcf_add_ids"
readme = "README.md"
keywords = ["genomics", "vcf"]
categories = ["bioinformatics"]

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
flate2 = "1.0.26"
sha1 = "0.10.5"
vcf = "0.6.1"
